k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: matt013/mern-backend:latest
          ports:
            - containerPort: 5000  # main API port
            - containerPort: 5001  # Prometheus metrics port
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - port: 5000       # service port for API
      targetPort: 5000
      name: api
    - port: 5001       # service port for Prometheus metrics
      targetPort: 5001
      name: metrics
  type: ClusterIP
